
public class Pixel {

    private int color;

    public void establecerColor(int i) {
        color = i;
    }

    public int obtenerColor() {
        return color;
    }

}
