package Reto001.Ejercicio1;

public class Frame {
    private int altura, anchura; 

    public void Pintar(){}
    public void PixelList(){}
}
 