package Reto001.Ejercicio1;

public class FrameList {
    private NodoFrame primero;
    private NodoFrame segundo;
    private int tamaño; 
}
