package Reto001.Ejercicio1;

public class NodoFrame {
    NodoFrame anterior, seguiente; 
    Frame frame; 
}
