package Reto001.Ejercicio1;

public class NodoPixel {
    private int anterior, seguiente; 
    Pixel pixel; 
}
