package Reto001.Ejercicio1;

public class PixelList {
    private NodoPixel primero, ultimo; 
    private int tamaño; 
    
}
